[V8] Many things crash when switching to V8's new aligned pointer API https://bugs.webkit.org/show_bug.cgi?id=101994

Reviewed by Eric Seidel.

When using the aligned pointer API, we need to make sure to initialize
every internal field that we later read because the new API has better
error checks than the old API. This patch explicitly initializes the
enteredIsolatedWorldIndex internal field to zero for main worlds,
fixing the LayoutTest crashes from our previous attempt to move the
aligned pointer API.

* bindings/v8/V8DOMWindowShell.cpp:
(WebCore::V8DOMWindowShell::initializeIfNeeded):


Canonical link: https://commits.webkit.org/120062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134318 268f45cc-cd09-0410-ab3c-d52691b4dbfc